# fosf

./: .gitignore  README.md  pyproject.toml
bpl_comparison/: Generating Random Weighted DAGs.ipynb  README.md  bpl.py
bpl_comparison/bpl/: bpl_d100_s1_benchmark.bpl  bpl_d100_s1_benchmark.bpl.commands  bpl_d10_s1_benchmark.bpl  bpl_d10_s1_benchmark.bpl.commands  bpl_d120_s1_benchmark.bpl  bpl_d120_s1_benchmark.bpl.commands  bpl_d20_s1_benchmark.bpl  bpl_d20_s1_benchmark.bpl.commands  bpl_d40_s1_benchmark.bpl  bpl_d40_s1_benchmark.bpl.commands  bpl_d60_s1_benchmark.bpl  bpl_d60_s1_benchmark.bpl.commands  bpl_d80_s1_benchmark.bpl  bpl_d80_s1_benchmark.bpl.commands
bpl_comparison/osf_timings/: 10  100  120  20  40  60  80
docs/: requirements.txt
docs/source/: conf.py  grammars.rst  index.rst  refs.bib
examples/: IJCAR.ipynb
fosf/: config.py  exceptions.py
fosf/parsers/: __init__.py  base.py  clause.py  graph.py  taxonomy.py  term.py  theory.py
fosf/reasoning/: __init__.py  clauses.py  terms.py  theory.py
fosf/syntax/: __init__.py  base.py  constraints.py  taxonomy.py  terms.py  theory.py
fosf/utils/: draw.py  graph.py  nx.py  rand.py  terms.py
tests/: test_clause_normalizer.py  test_fuzzy_taxonomy.py  test_fuzzy_term_unifier.py  test_fuzzy_theory_normalization.py  test_parser.py  test_taxonomy.py  test_term_unifier.py  test_theory_closure.py  test_theory_normalization.py
tests/taxonomies/: 1.txt  2.txt  fuzzy_random_10.txt  fuzzy_random_100.txt  fuzzy_random_20.txt  fuzzy_random_200.txt  fuzzy_random_50.txt  fuzzy_random_500.txt  random_100.txt  (+4 more)
(+126 files in other folders)
